# nvinfer-custom

./: CMakeLists.txt  Makefile  aligner.cpp  gstnvinfer.cpp  gstnvinfer.h  gstnvinfer_allocator.cpp  gstnvinfer_allocator.h  gstnvinfer_impl.cpp  gstnvinfer_impl.h  gstnvinfer_meta_utils.cpp  gstnvinfer_meta_utils.h  gstnvinfer_property_parser.cpp  gstnvinfer_property_parser.h  nvdsinfer_backend.cpp  nvdsinfer_context_impl.cpp  nvdsinfer_context_impl_output_parsing.cpp  nvdsinfer_conversion.h  nvdsinfer_func_utils.h  nvdsinfer_model_builder.cpp  nvdsinfer_model_builder.h
includes/: gst-nvdssr.h  gst-nvevent.h  gst-nvmessage.h  gst-nvquery.h  gstnvdsinfer.h  gstnvdsmeta.h  nvbufsurface.h  nvds_analytics_meta.h  nvds_dewarper_meta.h  nvds_latency_meta.h  nvds_msgapi.h  nvds_obj_encode.h  nvds_opticalflow_meta.h  nvds_tracker_meta.h  nvdsgstutils.h  nvdsinfer.h  nvdsinfer_context.h  nvdsinfer_custom_impl.h  nvdsinferserver_config.proto  nvdsmeta.h  nvdsmeta_schema.h  nvdstracker.h  nvll_osd_api.h  nvll_osd_struct.h
libs/amqp_protocol_adaptor/: Makefile.test
libs/azure_protocol_adaptor/device_client/: Makefile.test
libs/kafka_protocol_adaptor/: Makefile  Makefile.test  README  Security_Setup.md  cfg_kafka.txt  kafka_client.h  nvds_kafka_proto.cpp  nvds_kafka_proto.h  test_kafka_proto_async.cpp  test_kafka_proto_sync.cpp
libs/nvdsinfer/: Makefile  nvdsinfer_backend.cpp  nvdsinfer_backend.h  nvdsinfer_context_impl.h  nvdsinfer_func_utils.cpp  nvdsinfer_model_builder.cpp
libs/nvdsinfer_customparser/: Makefile  nvdsinfer_custombboxparser.cpp
(+1 files in other folders)
